[package]
name = "sly"
version = "0.0.4"
authors = ["Google LLC <njskalski@google.com>"]

[dependencies]
ropey = "0.6.3"
log = "0.4.1"
stderrlog = "0.4.0"
fst = "0.3.0"
fst-regex = "0.2.0"
syntect = "2.0.1"
unicode-segmentation = "1.0"
unicode-width = "0.1"
time = "0.1"
clipboard = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0.0"
cpuprofiler = "0.0.2"
futures = "0.2"
ignore = "0.4"
enumset = "0.3"

[dependencies.cursive]
version = "0.8.2"
default-features = false
features = ["termion-backend"]

[dependencies.cursive_tree_view]
# version = "0.2.1"
git = "https://github.com/gyscos/cursive_tree_view.git"
default-features = false
features = ["termion-backend"]
