[package]
name = "sly"
version = "0.0.7"
authors = ["Google LLC <njskalski@google.com>"]

[dependencies]
ropey = "0.8"
log = "0.4"
stderrlog = "0.4"
fst = "0.3"
fst-regex = "0.2"
syntect = "3.0"
unicode-segmentation = "1.0"
unicode-width = "0.1"
time = "0.1"
clipboard = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.0.0"
cpuprofiler = "0.0.2"
ignore = "0.4"
enumset = "0.3"
# static_assertions = "0.2.5"
# either = "1.5.0"
languageserver-types = "0.51"

[dependencies.ncurses]
version = "5.97.0"
features = ["extended_colors", "wide"]

[dependencies.cursive]
version = "0.10.0"
#default-features = false
features = ["termion-backend"]

[dependencies.cursive_tree_view]
# version = "0.2.1"
git = "https://github.com/njskalski/cursive_tree_view"
#default-features = false
features = ["termion-backend"]
