[package]
name = "sly"
version = "0.0.14"
authors = ["Google LLC <njskalski@google.com>"]

[dependencies]
ropey = "0.8"
log = "0.4"
stderrlog = "0.4"
fst = "0.3"
fst-regex = "0.2"
syntect = "3.0"
unicode-segmentation = "1.0"
unicode-width = "0.1"
time = "0.1"
clipboard = "0.5"
serde = "1.0"
serde_json = "1"
serde_derive = "1"
jsonrpc-core = "9"
regex = "1"
cpuprofiler = "0.0.2"
ignore = "0.4"
enumset = "0.3"
languageserver-types = "0.51"
uid = "0.1.4"
human-panic = "1"
crossbeam-channel = "0.3"
lazy_static = "1.2"
yaml-rust = "0.4"
filesystem = "0.4"

[dependencies.clap]
version = "2.32"
features = ["yaml"]

[dependencies.ncurses]
version = "5.97.0"
features = ["extended_colors", "wide"]

[dependencies.cursive]
#version = "0.10.0"
default-features = false
git = "https://github.com/njskalski/Cursive.git"
#tag = "0.10.0"
branch = "test_backend"
features = ["termion-backend"]

[dependencies.cursive_tree_view]
# version = "0.2.1"
git = "https://github.com/njskalski/cursive_tree_view"
branch = "with_test_backend"
#path = "/home/andrzej/r/cursive_tree_view"
#default-features = false
features = ["termion-backend"]
